--- a/app/src/main/res/layout/fragment_gioi_thieu.xml
+++ b/app/src/main/res/layout/fragment_gioi_thieu.xml
@@ -9,33 +9,6 @@
     android:layout_width="match_parent"
     android:layout_height="200dp"
     >
-    <android.support.design.widget.CollapsingToolbarLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:contentScrim="@color/colorPrimary"
-        app:layout_scrollFlags="scroll|exitUntilCollapsed"
-        android:id="@+id/collapsingToolbar"
-        app:title="GIỚI THIỆU">
-
-
-        <ImageView
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:src="@drawable/icon_logo"
-            android:layout_marginLeft="100dp"
-            app:layout_collapseMode="parallax"
-            android:scaleType="centerCrop"/>
-
-
-        <android.support.v7.widget.Toolbar
-            android:layout_width="match_parent"
-            app:layout_collapseMode="pin"
-
-            android:layout_height="?attr/actionBarSize">
-
-        </android.support.v7.widget.Toolbar>
-    </android.support.design.widget.CollapsingToolbarLayout>
-
 
 
 </android.support.design.widget.AppBarLayout>
@@ -49,6 +22,34 @@
             android:layout_height="wrap_content"
             android:text="@string/content"
             android:textSize="20dp"
-            android:textColor="black"/>
+            android:textColor="#000"/>
     </android.support.v4.widget.NestedScrollView>
+
+    <android.support.design.widget.CollapsingToolbarLayout
+        android:id="@+id/collapsingToolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#fff"
+        app:contentScrim="@color/colorPrimary"
+        app:layout_scrollFlags="scroll|exitUntilCollapsed"
+        app:title="GIỚI THIỆU">
+
+
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_marginLeft="100dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/logo"
+            app:layout_collapseMode="parallax" />
+
+
+        <android.support.v7.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+
+            app:layout_collapseMode="pin">
+
+        </android.support.v7.widget.Toolbar>
+    </android.support.design.widget.CollapsingToolbarLayout>
 </android.support.design.widget.CoordinatorLayout>
