--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,27 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-
+    android:padding="16dp"
     tools:context=".uis.ACLogin">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="16dp">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="9"
             android:orientation="vertical"
             android:id="@+id/linear"
             android:layout_marginBottom="16dp">
 
             <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="250dp"
+                android:layout_height="0dp"
+                android:layout_weight="4"
                 android:layout_marginBottom="20dp"
                 android:layout_marginTop="20dp"
                 android:src="@drawable/logo"/>
@@ -72,18 +70,17 @@
                 android:layout_height="50dp"
                 android:layout_gravity="center"
                 android:text="Login" />
+
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/tv_signup"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:textColor="#00f"
-            android:textStyle="italic"
-            android:gravity="center"
-            android:text="Sign up"
-            android:layout_below="@id/linear"/>
+    <TextView
+        android:id="@+id/tv_signup"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:textColor="#00f"
+        android:textStyle="italic"
+        android:gravity="bottom|center_horizontal"
+        android:text="Sign up"/>
 
-    </RelativeLayout>
-</ScrollView>
+</LinearLayout>
