--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -1,9 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.gms.maps.MapView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:map="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/map"
-    android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.MapsFragment" />
+    tools:context=".fragment.MapsFragment">
+
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="20dp"
+        android:layout_gravity="end|bottom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/img_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_my_location_black_24dp"
+            android:layout_marginBottom="5dp"
+            android:padding="10dp"
+            android:layout_gravity="bottom"
+            android:background="@color/mautrang"
+            />
+        <ImageView
+            android:id="@+id/img_zoom_in"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_zoom_in_black_24dp"
+            android:layout_marginBottom="5dp"
+            android:padding="10dp"
+            android:layout_gravity="bottom"
+            android:background="@color/mautrang"
+            />
+        <ImageView
+            android:id="@+id/img_zoom_out"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_zoom_out_black_24dp"
+            android:layout_marginBottom="50dp"
+            android:padding="10dp"
+            android:layout_gravity="bottom"
+            android:background="@color/mautrang"
+            />
+    </LinearLayout>
+
+
+
+</FrameLayout>
